--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   geolocator: ^5.3.1
   http: ^0.12.1
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
